feat : remove old entry point for only one ADS-B messages
