# dapia_detection_api/models/__init__.py
@@ -1,7 +1,6 @@
 # flake8: noqa
 # import models into model package
 from dapia_detection_api.models.aircraft_types import AircraftTypes
-from dapia_detection_api.models.classify_aircraft_request import ClassifyAircraftRequest
 from dapia_detection_api.models.classify_aircrafts_request import ClassifyAircraftsRequest
 from dapia_detection_api.models.data import Data
 from dapia_detection_api.models.data1 import Data1
